# fired-festival

./: .env.example  .gitignore  HARNESS.md  PLANNING.md  README.md  app.py  basic-architecture.html  pyproject.toml  requirements.txt  system-architecture.html
evals/: eval_set.json  run_evals.py
harness/: __init__.py  alarms.py  checkpoints.py  config.py  engine.py  escalation.py  guardrails.py  material.py  observability.py  store.py  tools.py  worker.py
workers/: __init__.py  echo_worker.py  linkedin_agent.py  rogue_worker.py  source_loader.py
