[project]
name = "Alter_Ego"
version = "0.1.0"
description = "Alter Ego / Career Conversation Chatbot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.18.0",
    "mailtrap>=2.6.0",
    "openai>=2.41.1",
    "openai-agents>=0.17.5",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.2",
]
